# spark_project_trend

./: .env.example  .gitignore  Backlog.txt  COMPLETION_SUMMARY.md  EXAMPLES_LIVY_CONFIG.md  IMPLEMENTATION_CHECKLIST.txt  IMPLEMENTATION_SUMMARY.md  INDEX_DOCUMENTATION.md  LIVY_ADVANCED_CONFIG_GUIDE.md  QUICKSTART_LIVY.md  VALIDATION.md  main.py  notes.txt  pyproject.toml  setup.py
config/: requirements-openai.txt
docs/: CONFIG_FLOW.md  QUICKSTART.md  README.md  README_ARCHITECTURE.md  SETUP.md  STATUS.md
frontend/: config.js  index_knox.html  index_knox.html.bak  index_simple.html
scripts/: commands.sh  start.sh
src/: __init__.py
src/agents/: __init__.py  livy_client.py  trend_analyzer.py
src/api/: __init__.py  server.py
src/models/: __init__.py  config.py
src/services/: db_service.py  sample_data_saved.json
src/utils/: __init__.py  logger.py  serializers.py
tests/: verify_architecture.py
